--- a/MoYeoRunToy/MoYeoRunToy/StoryBoard/Base.lproj/Main.storyboard
+++ b/MoYeoRunToy/MoYeoRunToy/StoryBoard/Base.lproj/Main.storyboard
@@ -43,27 +43,27 @@
                                         <rect key="frame" x="0.0" y="0.0" width="414" height="769"/>
                                         <subviews>
                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Group 273.png" translatesAutoresizingMaskIntoConstraints="NO" id="vod-4T-VLZ">
-                                                <rect key="frame" x="15" y="0.0" width="30" height="30"/>
+                                                <rect key="frame" x="15" y="10" width="30" height="30"/>
                                                 <constraints>
                                                     <constraint firstAttribute="width" constant="30" id="pil-Ye-7LT"/>
                                                     <constraint firstAttribute="width" secondItem="vod-4T-VLZ" secondAttribute="height" id="qvJ-gu-45i"/>
                                                 </constraints>
                                             </imageView>
                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Rectangle 142.png" translatesAutoresizingMaskIntoConstraints="NO" id="ggx-Cv-afL">
-                                                <rect key="frame" x="369" y="0.0" width="30" height="30"/>
+                                                <rect key="frame" x="369" y="10" width="30" height="30"/>
                                                 <constraints>
                                                     <constraint firstAttribute="width" secondItem="ggx-Cv-afL" secondAttribute="height" id="IRN-gm-Yc3"/>
                                                     <constraint firstAttribute="width" constant="30" id="VNr-eE-yoK"/>
                                                 </constraints>
                                             </imageView>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Palvin님, 즐거운 러닝 되세요." textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Cek-yA-CA5">
-                                                <rect key="frame" x="15" y="40" width="281" height="29"/>
+                                                <rect key="frame" x="15" y="50" width="281" height="29"/>
                                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="24"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <stackView opaque="NO" contentMode="scaleToFill" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="SGL-Hf-gb9">
-                                                <rect key="frame" x="15" y="79" width="389" height="38"/>
+                                                <rect key="frame" x="15" y="84" width="389" height="38"/>
                                                 <subviews>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="지금 인기있는 러닝" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vJo-nn-sUf">
                                                         <rect key="frame" x="0.0" y="0.0" width="341" height="38"/>
@@ -85,7 +85,7 @@
                                                 </subviews>
                                             </stackView>
                                             <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="iqe-GQ-m6y">
-                                                <rect key="frame" x="0.0" y="427" width="414" height="200"/>
+                                                <rect key="frame" x="0.0" y="422" width="414" height="200"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="200" id="Iz2-Xp-gFL"/>
                                                 </constraints>
@@ -94,13 +94,13 @@
                                                 </connections>
                                             </containerView>
                                             <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="rth-sP-L3h">
-                                                <rect key="frame" x="0.0" y="627" width="414" height="132"/>
+                                                <rect key="frame" x="0.0" y="622" width="414" height="137"/>
                                                 <connections>
                                                     <segue destination="Njg-5Y-PC1" kind="embed" id="ah1-QL-pkk"/>
                                                 </connections>
                                             </containerView>
                                             <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="2Qb-A7-5Q6">
-                                                <rect key="frame" x="0.0" y="127" width="414" height="300"/>
+                                                <rect key="frame" x="0.0" y="122" width="414" height="300"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="300" id="SAv-tZ-rSL"/>
                                                 </constraints>
@@ -115,14 +115,14 @@
                                             <constraint firstItem="Cek-yA-CA5" firstAttribute="leading" secondItem="WFZ-UK-7fh" secondAttribute="leading" constant="15" id="72z-78-uKT"/>
                                             <constraint firstItem="SGL-Hf-gb9" firstAttribute="leading" secondItem="WFZ-UK-7fh" secondAttribute="leading" constant="15" id="Kdd-oP-hro"/>
                                             <constraint firstItem="2Qb-A7-5Q6" firstAttribute="leading" secondItem="WFZ-UK-7fh" secondAttribute="leading" id="NpJ-ED-oEL"/>
-                                            <constraint firstItem="ggx-Cv-afL" firstAttribute="top" secondItem="WFZ-UK-7fh" secondAttribute="top" id="PDB-K6-mMT"/>
-                                            <constraint firstItem="SGL-Hf-gb9" firstAttribute="top" secondItem="Cek-yA-CA5" secondAttribute="bottom" constant="10" id="XW5-RR-4wU"/>
+                                            <constraint firstItem="ggx-Cv-afL" firstAttribute="top" secondItem="WFZ-UK-7fh" secondAttribute="top" constant="10" id="PDB-K6-mMT"/>
+                                            <constraint firstItem="SGL-Hf-gb9" firstAttribute="top" secondItem="Cek-yA-CA5" secondAttribute="bottom" constant="5" id="XW5-RR-4wU"/>
                                             <constraint firstAttribute="trailing" secondItem="SGL-Hf-gb9" secondAttribute="trailing" constant="10" id="bJt-ZV-fyV"/>
                                             <constraint firstAttribute="trailing" secondItem="rth-sP-L3h" secondAttribute="trailing" id="bXa-9D-Am8"/>
                                             <constraint firstItem="iqe-GQ-m6y" firstAttribute="leading" secondItem="WFZ-UK-7fh" secondAttribute="leading" id="f9V-4R-HZj"/>
-                                            <constraint firstItem="vod-4T-VLZ" firstAttribute="top" secondItem="WFZ-UK-7fh" secondAttribute="top" id="gBV-Qm-vZh"/>
+                                            <constraint firstItem="vod-4T-VLZ" firstAttribute="top" secondItem="WFZ-UK-7fh" secondAttribute="top" constant="10" id="gBV-Qm-vZh"/>
                                             <constraint firstAttribute="trailing" secondItem="iqe-GQ-m6y" secondAttribute="trailing" id="irq-eU-8W7"/>
-                                            <constraint firstItem="2Qb-A7-5Q6" firstAttribute="top" secondItem="SGL-Hf-gb9" secondAttribute="bottom" constant="10" id="kW1-Ja-sNP"/>
+                                            <constraint firstItem="2Qb-A7-5Q6" firstAttribute="top" secondItem="SGL-Hf-gb9" secondAttribute="bottom" id="kW1-Ja-sNP"/>
                                             <constraint firstItem="rth-sP-L3h" firstAttribute="top" secondItem="iqe-GQ-m6y" secondAttribute="bottom" id="mCI-b2-VcY"/>
                                             <constraint firstItem="vod-4T-VLZ" firstAttribute="leading" secondItem="WFZ-UK-7fh" secondAttribute="leading" constant="15" id="n0n-v4-CbD"/>
                                             <constraint firstAttribute="trailing" secondItem="2Qb-A7-5Q6" secondAttribute="trailing" id="r3d-fS-jxZ"/>
@@ -451,7 +451,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="새로운 미션" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eOq-qQ-elo">
-                                <rect key="frame" x="15" y="20" width="109" height="29"/>
+                                <rect key="frame" x="15" y="30" width="109" height="29"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="24"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -467,12 +467,12 @@
                                         <real key="value" value="0.0"/>
                                     </userDefinedRuntimeAttribute>
                                     <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
-                                        <real key="value" value="3"/>
+                                        <real key="value" value="5"/>
                                     </userDefinedRuntimeAttribute>
                                 </userDefinedRuntimeAttributes>
                             </button>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" scrollEnabled="NO" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="W74-5x-ZmY">
-                                <rect key="frame" x="15" y="59" width="384" height="100"/>
+                                <rect key="frame" x="15" y="69" width="384" height="90"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="ZvF-Mx-BzF">
                                     <size key="itemSize" width="178" height="192"/>
@@ -539,7 +539,7 @@
                             <constraint firstItem="eOq-qQ-elo" firstAttribute="leading" secondItem="LHO-Pr-uwk" secondAttribute="leading" constant="15" id="4G7-jw-4IT"/>
                             <constraint firstItem="W74-5x-ZmY" firstAttribute="top" secondItem="eOq-qQ-elo" secondAttribute="bottom" constant="10" id="8fs-5e-vXw"/>
                             <constraint firstItem="bvN-Wc-ZJ2" firstAttribute="leading" secondItem="LHO-Pr-uwk" secondAttribute="leading" constant="15" id="Ah6-d2-tOa"/>
-                            <constraint firstItem="eOq-qQ-elo" firstAttribute="top" secondItem="LHO-Pr-uwk" secondAttribute="top" constant="20" id="VUr-K5-Hz7"/>
+                            <constraint firstItem="eOq-qQ-elo" firstAttribute="top" secondItem="LHO-Pr-uwk" secondAttribute="top" constant="30" id="VUr-K5-Hz7"/>
                             <constraint firstAttribute="bottom" secondItem="bvN-Wc-ZJ2" secondAttribute="bottom" id="XuT-Ox-hb6"/>
                             <constraint firstAttribute="trailing" secondItem="W74-5x-ZmY" secondAttribute="trailing" constant="15" id="oLs-8V-nuB"/>
                             <constraint firstItem="W74-5x-ZmY" firstAttribute="leading" secondItem="LHO-Pr-uwk" secondAttribute="leading" constant="15" id="onq-J6-bA3"/>
@@ -556,17 +556,17 @@
             <objects>
                 <viewController id="Njg-5Y-PC1" customClass="HomeViewController_LastRecord" customModule="MoYeoRunToy" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="h3F-P0-rHu">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="132"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="137"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="지난 기록" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hN0-uF-XdE">
-                                <rect key="frame" x="15" y="20" width="89" height="29"/>
+                                <rect key="frame" x="15" y="30" width="89" height="29"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="24"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" scrollEnabled="NO" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="Jdx-y9-DCb">
-                                <rect key="frame" x="15" y="59" width="384" height="32"/>
+                                <rect key="frame" x="15" y="69" width="384" height="27"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="22n-dE-TKa">
                                     <size key="itemSize" width="355" height="106"/>
@@ -636,14 +636,14 @@
                                 </connections>
                             </collectionView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kSS-n0-YSo">
-                                <rect key="frame" x="15" y="101" width="384" height="31"/>
+                                <rect key="frame" x="15" y="106" width="384" height="31"/>
                                 <color key="backgroundColor" systemColor="systemGray3Color"/>
                                 <color key="tintColor" systemColor="systemGrayColor"/>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain" title="전체 보기 &gt;"/>
                                 <userDefinedRuntimeAttributes>
                                     <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
-                                        <real key="value" value="3"/>
+                                        <real key="value" value="5"/>
                                     </userDefinedRuntimeAttribute>
                                 </userDefinedRuntimeAttributes>
                             </button>
@@ -659,7 +659,7 @@
                             <constraint firstAttribute="trailing" secondItem="Jdx-y9-DCb" secondAttribute="trailing" constant="15" id="aiC-31-ZJa"/>
                             <constraint firstAttribute="trailing" secondItem="kSS-n0-YSo" secondAttribute="trailing" constant="15" id="dcZ-v9-hhg"/>
                             <constraint firstItem="Jdx-y9-DCb" firstAttribute="top" secondItem="hN0-uF-XdE" secondAttribute="bottom" constant="10" id="hrI-FA-H48"/>
-                            <constraint firstItem="hN0-uF-XdE" firstAttribute="top" secondItem="h3F-P0-rHu" secondAttribute="top" constant="20" id="siU-sX-OpW"/>
+                            <constraint firstItem="hN0-uF-XdE" firstAttribute="top" secondItem="h3F-P0-rHu" secondAttribute="top" constant="30" id="siU-sX-OpW"/>
                         </constraints>
                     </view>
                 </viewController>
