--- a/MoYeoRunToy/MoYeoRunToy/StoryBoard/Home.storyboard
+++ b/MoYeoRunToy/MoYeoRunToy/StoryBoard/Home.storyboard
@@ -31,13 +31,6 @@
                                                     <constraint firstAttribute="width" constant="30" id="jCq-SV-QP7"/>
                                                 </constraints>
                                             </imageView>
-                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Rectangle 142.png" translatesAutoresizingMaskIntoConstraints="NO" id="v4i-aw-Heg">
-                                                <rect key="frame" x="369" y="10" width="30" height="30"/>
-                                                <constraints>
-                                                    <constraint firstAttribute="width" secondItem="v4i-aw-Heg" secondAttribute="height" id="2v5-f1-72p"/>
-                                                    <constraint firstAttribute="width" constant="30" id="UhZ-h6-EHS"/>
-                                                </constraints>
-                                            </imageView>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Palvin님, 즐거운 러닝 되세요." textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zey-Vs-pjs">
                                                 <rect key="frame" x="15" y="50" width="281" height="29"/>
                                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="24"/>
@@ -71,25 +64,25 @@
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="200" id="3T8-Fk-4Mb"/>
                                                 </constraints>
-                                                <connections>
-                                                    <segue destination="Aj9-GN-60w" kind="embed" id="RM1-TZ-Bmm"/>
-                                                </connections>
                                             </containerView>
                                             <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="k7c-Ki-0xz">
                                                 <rect key="frame" x="0.0" y="622" width="414" height="137"/>
-                                                <connections>
-                                                    <segue destination="TcB-JQ-sw8" kind="embed" id="teX-XS-Rgg"/>
-                                                </connections>
                                             </containerView>
                                             <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="79Y-0e-5cW">
                                                 <rect key="frame" x="0.0" y="122" width="414" height="300"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="300" id="2B1-js-FmO"/>
                                                 </constraints>
-                                                <connections>
-                                                    <segue destination="ccm-sy-9Bt" kind="embed" id="OKd-og-MlR"/>
-                                                </connections>
                                             </containerView>
+                                            <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="avr-ob-AMa">
+                                                <rect key="frame" x="369" y="10" width="30" height="30"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" secondItem="avr-ob-AMa" secondAttribute="height" id="eDe-KF-N1D"/>
+                                                    <constraint firstAttribute="width" constant="30" id="es0-JT-yHb"/>
+                                                </constraints>
+                                                <state key="normal" title="Button"/>
+                                                <buttonConfiguration key="configuration" style="plain" image="Rectangle 142.png"/>
+                                            </button>
                                         </subviews>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <constraints>
@@ -101,12 +94,12 @@
                                             <constraint firstAttribute="trailing" secondItem="79Y-0e-5cW" secondAttribute="trailing" id="I33-P1-cxE"/>
                                             <constraint firstItem="k7c-Ki-0xz" firstAttribute="leading" secondItem="VaZ-lo-Ouk" secondAttribute="leading" id="OMl-Yb-cdz"/>
                                             <constraint firstItem="1Jz-RK-pwd" firstAttribute="leading" secondItem="VaZ-lo-Ouk" secondAttribute="leading" id="PAV-Sv-veR"/>
+                                            <constraint firstItem="avr-ob-AMa" firstAttribute="top" secondItem="VaZ-lo-Ouk" secondAttribute="top" constant="10" id="PPr-jc-eMf"/>
                                             <constraint firstItem="k7c-Ki-0xz" firstAttribute="top" secondItem="1Jz-RK-pwd" secondAttribute="bottom" id="PWH-ak-4jN"/>
                                             <constraint firstItem="1Jz-RK-pwd" firstAttribute="top" secondItem="79Y-0e-5cW" secondAttribute="bottom" id="UfK-jZ-3xE"/>
                                             <constraint firstAttribute="height" constant="769" id="X3h-F6-PQb"/>
-                                            <constraint firstAttribute="trailing" secondItem="v4i-aw-Heg" secondAttribute="trailing" constant="15" id="XbA-vl-7bv"/>
-                                            <constraint firstItem="v4i-aw-Heg" firstAttribute="top" secondItem="VaZ-lo-Ouk" secondAttribute="top" constant="10" id="ZwB-gO-nkt"/>
                                             <constraint firstItem="WXf-0A-QIM" firstAttribute="top" secondItem="zey-Vs-pjs" secondAttribute="bottom" constant="5" id="d6H-0U-fhh"/>
+                                            <constraint firstAttribute="trailing" secondItem="avr-ob-AMa" secondAttribute="trailing" constant="15" id="fc9-P6-OJ5"/>
                                             <constraint firstItem="1qp-vJ-WpF" firstAttribute="leading" secondItem="VaZ-lo-Ouk" secondAttribute="leading" constant="15" id="n9U-q0-2Vf"/>
                                             <constraint firstAttribute="trailing" secondItem="k7c-Ki-0xz" secondAttribute="trailing" id="oGU-M8-LGl"/>
                                             <constraint firstAttribute="trailing" secondItem="1Jz-RK-pwd" secondAttribute="trailing" id="tev-DO-QQv"/>
@@ -142,24 +135,24 @@
                     <connections>
                         <outlet property="newMissionCollectionView_HeightConstraint" destination="3T8-Fk-4Mb" id="s5v-yb-ogX"/>
                         <outlet property="nowPopularCollectionView_HeightConstraint" destination="2B1-js-FmO" id="jOo-cg-E7k"/>
-                        <outlet property="profileImageView" destination="v4i-aw-Heg" id="9nv-5I-Scu"/>
+                        <outlet property="profileImageView" destination="avr-ob-AMa" id="Lzm-DB-nfw"/>
                         <outlet property="scrollViewHeightConstraint" destination="X3h-F6-PQb" id="B7l-2T-T0c"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ouW-yf-yUs" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1167" y="393"/>
+            <point key="canvasLocation" x="-1278" y="143"/>
         </scene>
         <!--Home View Controller Now Popular-->
         <scene sceneID="sU2-XK-5cl">
             <objects>
                 <viewController id="ccm-sy-9Bt" customClass="HomeViewController_NowPopular" customModule="MoYeoRunToy" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="kye-dz-fDv">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="300"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="dbg-57-HqP">
-                                <rect key="frame" x="0.0" y="0.0" width="414" height="300"/>
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="ye0-n1-dDF">
                                     <size key="itemSize" width="361" height="153"/>
@@ -169,7 +162,7 @@
                                 </collectionViewFlowLayout>
                                 <cells>
                                     <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="HomeViewController_NowPopular_CollectionView_Cell" id="YEe-zP-bgk" customClass="HomeViewController_NowPopular_CollectionView_Cell" customModule="MoYeoRunToy" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="73.5" width="361" height="153"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="361" height="153"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="8Cl-EB-AG9">
                                             <rect key="frame" x="0.0" y="0.0" width="361" height="153"/>
@@ -236,7 +229,7 @@
             <objects>
                 <viewController id="Aj9-GN-60w" customClass="HomeViewController_NewMission" customModule="MoYeoRunToy" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8Gn-2i-JkQ">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="200"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="새로운 미션" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Bs6-oG-vho">
@@ -246,7 +239,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="U7j-kf-gyJ">
-                                <rect key="frame" x="15" y="169" width="384" height="31"/>
+                                <rect key="frame" x="15" y="865" width="384" height="31"/>
                                 <color key="backgroundColor" systemColor="systemGray3Color"/>
                                 <color key="tintColor" systemColor="systemGrayColor"/>
                                 <state key="normal" title="Button"/>
@@ -261,7 +254,7 @@
                                 </userDefinedRuntimeAttributes>
                             </button>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" scrollEnabled="NO" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="NuN-HZ-WKt">
-                                <rect key="frame" x="15" y="69" width="384" height="90"/>
+                                <rect key="frame" x="15" y="69" width="384" height="786"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="v4o-gk-guc">
                                     <size key="itemSize" width="178" height="192"/>
@@ -345,7 +338,7 @@
             <objects>
                 <viewController id="TcB-JQ-sw8" customClass="HomeViewController_LastRecord" customModule="MoYeoRunToy" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="mHh-wP-Q6K">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="137"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="지난 기록" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="n5k-5s-pmd">
@@ -355,7 +348,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" scrollEnabled="NO" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="W48-J9-4zU">
-                                <rect key="frame" x="15" y="69" width="384" height="27"/>
+                                <rect key="frame" x="15" y="69" width="384" height="786"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="xaD-YL-XVS">
                                     <size key="itemSize" width="355" height="106"/>
@@ -425,7 +418,7 @@
                                 </connections>
                             </collectionView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="q6B-ZR-99c">
-                                <rect key="frame" x="15" y="106" width="384" height="31"/>
+                                <rect key="frame" x="15" y="865" width="384" height="31"/>
                                 <color key="backgroundColor" systemColor="systemGray3Color"/>
                                 <color key="tintColor" systemColor="systemGrayColor"/>
                                 <state key="normal" title="Button"/>
