--- a/MoYeoRunToy/MoYeoRunToy/StoryBoard/Home.storyboard
+++ b/MoYeoRunToy/MoYeoRunToy/StoryBoard/Home.storyboard
@@ -81,7 +81,12 @@
                                                     <constraint firstAttribute="width" constant="30" id="es0-JT-yHb"/>
                                                 </constraints>
                                                 <state key="normal" title="Button"/>
-                                                <buttonConfiguration key="configuration" style="plain" image="Rectangle 142.png"/>
+                                                <buttonConfiguration key="configuration" style="plain" image="Rectangle 142.png">
+                                                    <preferredSymbolConfiguration key="preferredSymbolConfigurationForImage" configurationType="pointSize" pointSize="20"/>
+                                                </buttonConfiguration>
+                                                <connections>
+                                                    <action selector="onTouchProfileImage:" destination="5CW-7w-dov" eventType="touchUpInside" id="3DM-aB-eTn"/>
+                                                </connections>
                                             </button>
                                         </subviews>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -141,7 +146,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ouW-yf-yUs" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1278" y="143"/>
+            <point key="canvasLocation" x="-1381" y="137"/>
         </scene>
         <!--Home View Controller Now Popular-->
         <scene sceneID="sU2-XK-5cl">
