--- a/MoYeoRunToy/MoYeoRunToy/StoryBoard/MyPage.storyboard
+++ b/MoYeoRunToy/MoYeoRunToy/StoryBoard/MyPage.storyboard
@@ -15,8 +15,19 @@
                     <view key="view" contentMode="scaleToFill" id="5EZ-qb-Rvc">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="36O-Cb-amP" customClass="PentagonView" customModule="MoYeoRunToy" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="44" width="414" height="852"/>
+                            </view>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="vDu-zF-Fre"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="36O-Cb-amP" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" id="NdH-cb-QjH"/>
+                            <constraint firstAttribute="bottom" secondItem="36O-Cb-amP" secondAttribute="bottom" id="Ott-6d-DhW"/>
+                            <constraint firstItem="36O-Cb-amP" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" id="TcC-HE-UO4"/>
+                            <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="36O-Cb-amP" secondAttribute="trailing" id="X96-vf-YGM"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ief-a0-LHa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
