--- a/MoYeoRunToy/MoYeoRunToy/StoryBoard/완료된/MyPage.storyboard
+++ b/MoYeoRunToy/MoYeoRunToy/StoryBoard/완료된/MyPage.storyboard
@@ -4,6 +4,7 @@
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="Stack View standard spacing" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -17,13 +18,14 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Rectangle 142.png" translatesAutoresizingMaskIntoConstraints="NO" id="si3-ys-apq">
-                                <rect key="frame" x="165.5" y="90.5" width="83" height="83"/>
+                                <rect key="frame" x="177" y="90.5" width="60" height="60"/>
                                 <constraints>
+                                    <constraint firstAttribute="height" constant="60" id="l9e-bd-txq"/>
                                     <constraint firstAttribute="width" secondItem="si3-ys-apq" secondAttribute="height" id="puf-gH-Jfa"/>
                                 </constraints>
                             </imageView>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="8YU-Pu-Xy8">
-                                <rect key="frame" x="168" y="183.5" width="78" height="78.5"/>
+                                <rect key="frame" x="168" y="160.5" width="78" height="78.5"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="박주영" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wAD-yi-UI6">
                                         <rect key="frame" x="10.5" y="0.0" width="57.5" height="26.5"/>
@@ -45,8 +47,8 @@
                                     </label>
                                 </subviews>
                             </stackView>
-                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalSpacing" alignment="center" spacing="50" translatesAutoresizingMaskIntoConstraints="NO" id="IjE-Kd-IHd">
-                                <rect key="frame" x="20.5" y="282" width="373" height="250"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" alignment="center" spacingType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="IjE-Kd-IHd">
+                                <rect key="frame" x="20.5" y="259" width="373" height="166"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0Pm-1m-A8G">
                                         <rect key="frame" x="0.0" y="0.0" width="373" height="50"/>
@@ -79,7 +81,7 @@
                                         </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QDX-cE-vXI">
-                                        <rect key="frame" x="0.0" y="100" width="373" height="50"/>
+                                        <rect key="frame" x="0.0" y="58" width="373" height="50"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="50" id="fGh-RP-2k9"/>
                                         </constraints>
@@ -106,7 +108,7 @@
                                         </userDefinedRuntimeAttributes>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1zX-5X-iAl">
-                                        <rect key="frame" x="0.0" y="200" width="373" height="50"/>
+                                        <rect key="frame" x="0.0" y="116" width="373" height="50"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="50" id="lSU-M9-NYE"/>
                                         </constraints>
@@ -148,7 +150,6 @@
                             <constraint firstItem="si3-ys-apq" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="centerY" multiplier="0.2" id="K2l-1P-gPL"/>
                             <constraint firstItem="IjE-Kd-IHd" firstAttribute="top" secondItem="8YU-Pu-Xy8" secondAttribute="bottom" constant="20" id="Ql3-Zo-tHH"/>
                             <constraint firstItem="IjE-Kd-IHd" firstAttribute="centerX" secondItem="vDu-zF-Fre" secondAttribute="centerX" id="cfj-wf-BIp"/>
-                            <constraint firstItem="si3-ys-apq" firstAttribute="width" secondItem="5EZ-qb-Rvc" secondAttribute="width" multiplier="0.2" id="cxf-Re-gr3"/>
                             <constraint firstItem="8YU-Pu-Xy8" firstAttribute="top" secondItem="si3-ys-apq" secondAttribute="bottom" constant="10" id="kZa-Rm-yM8"/>
                             <constraint firstItem="si3-ys-apq" firstAttribute="centerX" secondItem="vDu-zF-Fre" secondAttribute="centerX" id="xOu-B2-c95"/>
                         </constraints>
